is good is good

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "defaultPath": "C:/Users/Кирилл//Desktop/Стажировка/FSService/derectoris/home",
+    "defaultPath": "C:/Users/Кирилл/Desktop/Стажировка/FSService/derectoris/home",
     "goodPaths": [
         "C:/Users/Кирилл/Desktop/Стажировка/FSService/derectoris/home",
         "C:/Users/Кирилл/Desktop/Стажировка/FSService/derectoris/123.txt",
