--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "helloapp",
   "version": "1.0.0",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "gen": "node ./swagger/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "glob": "^10.3.10",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.0"
   }
 }
