--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "gen": "node ./swagger/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
-    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
 }
