--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gen": "node ./swagger/index.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "glob": "^10.3.10",
