--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
     "passport": "^0.7.0",
