--- a/settings.json
+++ b/settings.json
@@ -24,6 +24,6 @@
     "database": "fss",
     "password": "gamemode1324",
     "pgPort": 5432,
-    "tableName": "file_info",
+    "tableNameFileInfo": "file_info",
     "tableNameUsers": "users"
 }
