--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "express-session": "^1.18.0",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
+    "mongodb": "^6.7.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
